--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <nav>
-      <div class="main-nav">
-        <a href="#">
-          <img src="assets/text.png" alt="logo-company" />
+      <div class="main-nav container flex">
+        <a href="#" class="company-logo">
+          <img src="assets/logo.png"company-logo</>
         </a>
         <div class="nav-links">
-          <ul>
+          <ul class="flex">
             <li class="hover-link nav-items">IPL</li>
             <li class="hover-link nav-items">Finance</li>
             <li class="hover-link nav-items">Politics</li>
