--- a/index.html
+++ b/index.html
@@ -10,25 +10,44 @@
     <nav>
       <div class="main-nav container flex">
         <a href="#" class="company-logo">
-          <img src="assets/logo.png"company-logo</>
+          <img src="assets/logo.png" alt="Company Logo" />
         </a>
         <div class="nav-links">
           <ul class="flex">
-            <li class="hover-link nav-items">IPL</li>
-            <li class="hover-link nav-items">Finance</li>
-            <li class="hover-link nav-items">Politics</li>
+            <li class="hover-link nav-items" id="Sports" onclick="onNavItemClick('sports')">Sports</li>
+            <li class="hover-link nav-items" id="finance" onclick="onNavItemClick('finance')">Finance</li>
+            <li class="hover-link nav-items" id="politics" onclick="onNavItemClick('politics')">Politics</li>
           </ul>
         </div>
-        <div class="search-box">
-          <input
-            type="text"
-            class="news-input"
-            placeholder="e.g science"/>
-            <button class="search-button">Search</button>
+        <div class="search-box flex">
+          <input id="search-text" type="text" class="news-input" placeholder="e.g science" />
+          <button id="search-button" class="search-button">Search</button>
         </div>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <div class="card-container container flex" id="cards-container">
+        
+      </div>
+    </main>
+    <template id="template-news-card">
+      <div class="card">
+        <div class="card-header">
+         <img id="news-img" src="" alt="News Image">
+        </div>
+        <div class="card-content">
+          <h3 id="news-title">This is the title</h3>
+          <h6 class="news-source" id="news-source">End Gadget 27-02-25</h6>
+          <p class="news-desc" id="news-desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Reprehenderit minus blanditiis officiis eius libero voluptates
+            debitis laboriosam! Suscipit voluptatem non ratione enim esse
+            deleniti, magnam fugit quo excepturi eaque dicta?
+          </p>
+        </div>
+      </div>
+
+    </template>
     <script src="script.js"></script>
   </body>
 </html>
